--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,26 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item>
+    <ion-label position="floating">Digite seu nome:</ion-label>
+    <ion-input clearInput [(ngModel)]="nome"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Digite sua idade:</ion-label>
+    <ion-input type="number" [(ngModel)]="idade"></ion-input>
+  </ion-item>
+
+<br>
+<ion-button expand="block" (click)="msg()">Mensagem</ion-button>
+
+<p><strong>Nome informado:</strong> {{nome}} </p>
+<p><strong>Idade informado:</strong> {{idade}} </p>
+
+{{mensagem}}
+<br>
+{{situacao}}
+
+
 </ion-content>
